; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_draw-affine.c_fz_paint_image_with_color.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_draw-affine.c_fz_paint_image_with_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fz_paint_image_with_color(i32* %0, %struct.TYPE_10__* %1, i32* %2, %struct.TYPE_10__* %3, %struct.TYPE_10__* %4, %struct.TYPE_10__* %5, i32 %6, i32* %7, i32 %8, i32 %9, i32* %10) #0 {
  %12 = alloca i32*, align 8
  %13 = alloca %struct.TYPE_10__*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca %struct.TYPE_10__*, align 8
  %16 = alloca %struct.TYPE_10__*, align 8
  %17 = alloca %struct.TYPE_10__*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32*, align 8
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32*, align 8
  store i32* %0, i32** %12, align 8
  store %struct.TYPE_10__* %1, %struct.TYPE_10__** %13, align 8
  store i32* %2, i32** %14, align 8
  store %struct.TYPE_10__* %3, %struct.TYPE_10__** %15, align 8
  store %struct.TYPE_10__* %4, %struct.TYPE_10__** %16, align 8
  store %struct.TYPE_10__* %5, %struct.TYPE_10__** %17, align 8
  store i32 %6, i32* %18, align 4
  store i32* %7, i32** %19, align 8
  store i32 %8, i32* %20, align 4
  store i32 %9, i32* %21, align 4
  store i32* %10, i32** %22, align 8
  %23 = load %struct.TYPE_10__*, %struct.TYPE_10__** %17, align 8
  %24 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = icmp eq i32 %25, 1
  %27 = zext i1 %26 to i32
  %28 = call i32 @assert(i32 %27)
  %29 = load i32*, i32** %12, align 8
  %30 = load %struct.TYPE_10__*, %struct.TYPE_10__** %13, align 8
  %31 = load i32*, i32** %14, align 8
  %32 = load %struct.TYPE_10__*, %struct.TYPE_10__** %15, align 8
  %33 = load %struct.TYPE_10__*, %struct.TYPE_10__** %16, align 8
  %34 = load %struct.TYPE_10__*, %struct.TYPE_10__** %17, align 8
  %35 = load i32, i32* %18, align 4
  %36 = load i32*, i32** %19, align 8
  %37 = load i32, i32* %20, align 4
  %38 = load i32, i32* %21, align 4
  %39 = load i32*, i32** %22, align 8
  %40 = call i32 @fz_paint_image_imp(i32* %29, %struct.TYPE_10__* %30, i32* %31, %struct.TYPE_10__* %32, %struct.TYPE_10__* %33, %struct.TYPE_10__* %34, i32 %35, i32* %36, i32 255, i32 %37, i32 %38, i32* %39)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @fz_paint_image_imp(i32*, %struct.TYPE_10__*, i32*, %struct.TYPE_10__*, %struct.TYPE_10__*, %struct.TYPE_10__*, i32, i32*, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
